--- a/looplab/index.html
+++ b/looplab/index.html
@@ -1,33 +1,406 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Bootstrap Theme</title>
-</head>
+    <link rel="stylesheet" href="css/app.css" />
+    <title>LoopLAB by Salle</title>
+  </head>
 
-<body>
-  <!-- START HERE -->
+  <body data-spy="scroll" data-target="#main-navbar">
+    <!-- NAVBAR -->
+    <nav
+      id="main-navbar"
+      class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark"
+    >
+      <div class="container">
+        <a href="#home" class="navbar-brand">LoopLAB</a>
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="#home" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#explore-header" class="nav-link">Explore</a>
+            </li>
+            <li class="nav-item">
+              <a href="#create-header" class="nav-link">Create</a>
+            </li>
+            <li class="nav-item">
+              <a href="#share-header" class="nav-link">Share</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
+    <!-- HOME -->
+    <section id="home" class="home">
+      <div class="dark-overlay">
+        <div class="home-inner container">
+          <div class="row">
+            <div class="d-none col-lg-8 d-lg-block text-white">
+              <h1 class="display-4">
+                Build <strong>social profiles</strong> and gain revenue
+                <strong>profits</strong>
+              </h1>
 
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"></script>
+              <div class="d-flex">
+                <div class="p-4">
+                  <i class="fas fa-check fa-2x"></i>
+                </div>
+                <div class="p-4">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Odio quaerat sint optio neque eum debitis.
+                  </p>
+                </div>
+              </div>
+              <div class="d-flex">
+                <div class="p-4">
+                  <i class="fas fa-check fa-2x"></i>
+                </div>
+                <div class="p-4">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Odio quaerat sint optio neque eum debitis.
+                  </p>
+                </div>
+              </div>
+              <div class="d-flex">
+                <div class="p-4">
+                  <i class="fas fa-check fa-2x"></i>
+                </div>
+                <div class="p-4">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Odio quaerat sint optio neque eum debitis.
+                  </p>
+                </div>
+              </div>
+            </div>
 
-  <script>
-    // Get the current year for the copyright
-    $('#year').text(new Date().getFullYear());
-  </script>
-</body>
+            <div class="col-lg-4">
+              <div class="card bg-primary text-center text-white card-form">
+                <div class="card-body">
+                  <h3>Sign Up Today</h3>
+                  <p>Please fill out this form to register</p>
+                  <form>
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control form-control-lg"
+                        placeholder="Username"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <input
+                        type="email"
+                        class="form-control form-control-lg"
+                        placeholder="Email"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <input
+                        type="password"
+                        class="form-control form-control-lg"
+                        placeholder="Password"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <input
+                        type="password"
+                        class="form-control form-control-lg"
+                        placeholder="Confirm Password"
+                      />
+                    </div>
 
+                    <button class="btn btn-primary btn-block btn-outline-light">
+                      Submit
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- EXPLORE -->
+    <section id="explore-header" class="explore">
+      <div class="container text-center text-white ">
+        <div class="row">
+          <div class="col py-5">
+            <h2 class="display-4">Explore</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste
+              dolor dolorum ea officiis, voluptate enim voluptates rem ratione
+              est facere.
+            </p>
+            <button class="btn btn-outline-secondary">Find-out More</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- EXPLORE SECTION -->
+    <section
+      id="explore-section"
+      class="explore-section text-secondary pt-5  bg-light"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/explore-section1.jpg"
+              class="img-fluid rounded-circle"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Explore & Connect</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+              nulla corrupti dolore reprehenderit inventore. Tempora
+              exercitationem dolor iure perspiciatis, perferendis nemo debitis,
+              illum maiores non, labore a saepe modi quidem.
+            </p>
+
+            <div class="d-flex">
+              <div class="check p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates quia culpa excepturi. Ut minus ea maiores doloribus
+                </p>
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="check p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates quia culpa excepturi. Ut minus ea maiores doloribus
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CREATE HEADER -->
+    <section id="create-header" class="explore bg-primary">
+      <div class="container text-center text-white ">
+        <div class="row">
+          <div class="col py-5">
+            <h2 class="display-4">Create</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste
+              dolor dolorum ea officiis, voluptate enim voluptates rem ratione
+              est facere.
+            </p>
+            <button class="btn btn-outline-light">
+              Find-out More
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CREATE SECTION -->
+    <section id="create-section" class="create-section text-white pt-5 ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Create Your Passion</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+              nulla corrupti dolore reprehenderit inventore. Tempora
+              exercitationem dolor iure perspiciatis, perferendis nemo debitis,
+              illum maiores non, labore a saepe modi quidem.
+            </p>
+
+            <div class="d-flex">
+              <div class="check p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates quia culpa excepturi. Ut minus ea maiores doloribus
+                </p>
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="check p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates quia culpa excepturi. Ut minus ea maiores doloribus
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <img
+              src="img/create-section1.jpg"
+              class="img-fluid rounded-circle"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE -->
+    <section id="share-header" class="share bg-primary">
+      <div class="container text-center  text-white ">
+        <div class="row">
+          <div class="col py-5">
+            <h2 class="display-4">Share</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste
+              dolor dolorum ea officiis, voluptate enim voluptates rem ratione
+              est facere.
+            </p>
+            <button class="btn btn-outline-light">Find-out More</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE SECTION -->
+    <section
+      id="share-section"
+      class="share-section text-secondary pt-5  bg-light"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/share-section1.jpg"
+              class="img-fluid rounded-circle"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Share What You Create</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+              nulla corrupti dolore reprehenderit inventore. Tempora
+              exercitationem dolor iure perspiciatis, perferendis nemo debitis,
+              illum maiores non, labore a saepe modi quidem.
+            </p>
+
+            <div class="d-flex">
+              <div class="check p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates quia culpa excepturi. Ut minus ea maiores doloribus
+                </p>
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="check p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates quia culpa excepturi. Ut minus ea maiores doloribus
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer id="footer" class="text-white text-center py-4">
+      <div class="container">
+        <h3>LoopLAB</h3>
+        <p>Copyright &copy; <span id="year"></span></p>
+        <button class="btn btn-primary">Contact Us</button>
+      </div>
+    </footer>
+
+    <script
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+      integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      // Get the current year for the copyright
+      $('#year').text(new Date().getFullYear());
+
+      // Init Scrollspy
+      $('body').scrollspy({ target: '#main-navbar' });
+
+      // Smooth Scrolling
+      $('#main-navbar a').on('click', function(e) {
+        // Check for hash value
+        if (this.hash !== '') {
+          // Prevent default behaviour
+          e.preventDefault();
+
+          // Store hash
+          const hash = this.hash;
+
+          //Animate smooth scroll
+          $('html, body').animate(
+            {
+              scrollTop: $(hash).offset().top
+            },
+            900,
+            function() {
+              // Add hash to URL after scroll
+              window.location.hash = hash;
+            }
+          );
+        }
+      });
+    </script>
+  </body>
 </html>
