--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -76,7 +76,7 @@
           <div class="col-md-4">
             <input
               type="text"
-              class="form-control form-control-lg"
+              class="form-control form-control-lg mb-3"
               placeholder="Enter Name"
             />
           </div>
@@ -84,12 +84,166 @@
           <div class="col-md-4">
             <input
               type="email"
-              class="form-control form-control-lg"
+              class="form-control form-control-lg mb-3"
               placeholder="Enter Email"
             />
           </div>
           <div class="col-md-4">
             <button class="btn btn-primary btn-lg btn-block">Subscribe</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CARD SECTION -->
+    <section class="card-section" id="card-section">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-md-3">
+            <div class="card text-center card-border-primary">
+              <div class="card-body">
+                <h3 class="card-title mb-4">Be Better</h3>
+                <p class="card-text text-muted">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolorum sit laudantium minus sunt, consectetur culpa?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center card-bg-primary">
+              <div class="card-body">
+                <h3 class="card-title mb-4">Be Smarter</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolorum sit laudantium minus sunt, consectetur culpa?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center card-border-primary">
+              <div class="card-body">
+                <h3 class="card-title mb-4">Be Faster</h3>
+                <p class="card-text text-muted">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolorum sit laudantium minus sunt, consectetur culpa?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center card-bg-primary">
+              <div class="card-body">
+                <h3 class="card-title mb-4">Be Stronger</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolorum sit laudantium minus sunt, consectetur culpa?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ABOUT SECTION -->
+    <section class="about-section" id="about-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 m-auto text-center">
+            <h1 class="text-primary">Why This Book?</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus
+              incidunt, quasi explicabo.
+            </p>
+            <hr />
+          </div>
+        </div>
+
+        <!-- ACCORDION -->
+        <div class="row my-4">
+          <div class="col">
+            <div id="accordion">
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse1"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse1" class="collapse show">
+                  <div class="card-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Impedit odit laborum qui, debitis, sequi dolores nobis
+                    mollitia labore quasi earum laboriosam nihil cupiditate
+                    magnam iusto nostrum doloremque accusantium repudiandae
+                    expedita autem et, repellendus suscipit consequatur! Alias,
+                    maiores amet sunt ab inventore illo, deleniti facilis
+                    consequatur tenetur nam pariatur fuga nisi!
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse2"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Gain The
+                      Knowledge
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse2" class="collapse ">
+                  <div class="card-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Impedit odit laborum qui, debitis, sequi dolores nobis
+                    mollitia labore quasi earum laboriosam nihil cupiditate
+                    magnam iusto nostrum doloremque accusantium repudiandae
+                    expedita autem et, repellendus suscipit consequatur! Alias,
+                    maiores amet sunt ab inventore illo, deleniti facilis
+                    consequatur tenetur nam pariatur fuga nisi!
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header text-center">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse3"
+                      data-toggle="collapse"
+                      data-parent="#accordion"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse3" class="collapse ">
+                  <div class="card-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Impedit odit laborum qui, debitis, sequi dolores nobis
+                    mollitia labore quasi earum laboriosam nihil cupiditate
+                    magnam iusto nostrum doloremque accusantium repudiandae
+                    expedita autem et, repellendus suscipit consequatur! Alias,
+                    maiores amet sunt ab inventore illo, deleniti facilis
+                    consequatur tenetur nam pariatur fuga nisi!
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
