--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <title>Mizuxe by Salle</title>
   </head>
-  <body>
+  <body id="home" data-spy="scroll" data-target="#navbar">
     <!-- NAVBAR -->
     <nav
       id="navbar"
@@ -148,7 +148,7 @@
     </section>
 
     <!-- ABOUT SECTION -->
-    <section class="about-section" id="about-section">
+    <section class="about-section bg-light py-3" id="about-section">
       <div class="container">
         <div class="row">
           <div class="col-md-6 m-auto text-center">
@@ -249,6 +249,213 @@
       </div>
     </section>
 
+    <!-- MEET THE AUTHORS -->
+    <section class="authors-section py-3 mt-3" id="authors-section">
+      <div class="container">
+        <div class="row mb-4">
+          <div class="col-md-6 m-auto text-center">
+            <h1 class="text-primary">Meet The Authors</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus
+              incidunt, quasi explicabo.
+            </p>
+            <hr />
+          </div>
+        </div>
+
+        <!-- AUTHORS -->
+        <section class="authors">
+          <div class="container">
+            <div class="row py-4">
+              <div class="d-flex col-lg-3 col-md-6 mb-5 text-center">
+                <div class="card">
+                  <div class="card-body">
+                    <img
+                      src="img/person1.jpg"
+                      class="w-50 img-fluid rounded-circle"
+                      alt=""
+                    />
+                    <h3>Susan Williams</h3>
+                    <p class="text-muted">Lead Writer</p>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Ipsam, dicta. Nobis velit error culpa maxime eum dolore
+                      aliquid commodi laboriosam.
+                    </p>
+                    <div class="icons d-flex justify-content-between p-2">
+                      <a href="https://facebook.com">
+                        <i class="fab fa-facebook"></i>
+                      </a>
+                      <a href="https://twitter.com">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                      <a href="https://instagram.com">
+                        <i class="fab fa-instagram"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="d-flex col-lg-3 col-md-6 mb-5 text-center">
+                <div class="card">
+                  <div class="card-body">
+                    <img
+                      src="img/person2.jpg"
+                      class="w-50 img-fluid rounded-circle"
+                      alt=""
+                    />
+                    <h3>Grace Smith</h3>
+                    <p class="text-muted">Co-Writer</p>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Ipsam, dicta. Nobis velit error culpa maxime eum dolore
+                      aliquid commodi laboriosam.
+                    </p>
+                    <div class="icons d-flex justify-content-between p-2">
+                      <a href="https://facebook.com">
+                        <i class="fab fa-facebook"></i>
+                      </a>
+                      <a href="https://twitter.com">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                      <a href="https://instagram.com">
+                        <i class="fab fa-instagram"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="d-flex col-lg-3 col-md-6 mb-5 text-center">
+                <div class="card">
+                  <div class="card-body">
+                    <img
+                      src="img/person3.jpg"
+                      class="w-50 img-fluid rounded-circle"
+                      alt=""
+                    />
+                    <h3>John Doe</h3>
+                    <p class="text-muted">Editor</p>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Ipsam, dicta. Nobis velit error culpa maxime eum dolore
+                      aliquid commodi laboriosam.
+                    </p>
+                    <div class="icons d-flex justify-content-between p-2">
+                      <a href="https://facebook.com">
+                        <i class="fab fa-facebook"></i>
+                      </a>
+                      <a href="https://twitter.com">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                      <a href="https://instagram.com">
+                        <i class="fab fa-instagram"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="d-flex col-lg-3 col-md-6 mb-5 text-center">
+                <div class="card">
+                  <div class="card-body">
+                    <img
+                      src="img/person4.jpg"
+                      class="w-50 img-fluid rounded-circle"
+                      alt=""
+                    />
+                    <h3>Kevin Swanson</h3>
+                    <p class="text-muted">Designer</p>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Ipsam, dicta. Nobis velit error culpa maxime eum dolore
+                      aliquid commodi laboriosam.
+                    </p>
+                    <div class="icons d-flex justify-content-between p-2">
+                      <a href="https://facebook.com">
+                        <i class="fab fa-facebook"></i>
+                      </a>
+                      <a href="https://twitter.com">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                      <a href="https://instagram.com">
+                        <i class="fab fa-instagram"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </section>
+
+    <!-- CONTACT SECTION -->
+    <section class="contact-section bg-light py-5" id="contact-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h3>Get In Touch</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+              odio!
+            </p>
+            <form>
+              <div class="input-group input-group-lg mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-user"></i>
+                  </span>
+                </div>
+                <input type="text" class="form-control" placeholder="Name" />
+              </div>
+              <div class="input-group input-group-lg mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-envelope"></i>
+                  </span>
+                </div>
+                <input type="email" class="form-control" placeholder="Email" />
+              </div>
+              <div class="input-group input-group-lg mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-pencil-alt"></i>
+                  </span>
+                </div>
+                <textarea
+                  class="form-control"
+                  rows="6"
+                  placeholder="Message"
+                ></textarea>
+              </div>
+              <button class="btn btn-block btn-lg btn-primary">Submit</button>
+            </form>
+          </div>
+
+          <div class="d-none col-md-4 d-md-block align-self-center">
+            <img src="img/mlogo.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER SECTION -->
+    <footer
+      class="footer-section bg-primary text-white p-5"
+      id="footer-section"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-4 ml-auto">
+            <p class="lead">Copyright &copy; <span id="year"></span></p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script
       src="http://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -268,6 +475,28 @@
     <script>
       // Get the current year for the copyright
       $('#year').text(new Date().getUTCFullYear());
+
+      // Init Scrollspy
+      $('body').scrollspy({ target: '#navbar' });
+
+      // Smooth Scrolling
+      $('#navbar a').on('click', function(event) {
+        if (this.hash !== '') {
+          event.preventDefault();
+
+          const hash = this.hash;
+
+          $('html, body').animate(
+            {
+              scrollTop: $(hash).offset().top
+            },
+            800,
+            function() {
+              window.location.hash = hash;
+            }
+          );
+        }
+      });
     </script>
   </body>
 </html>
